# CompeteIQ

./: README.md  main.py  package-lock.json  pyproject.toml  requirements.txt
agents/: graph.py  state.py
agents/nodes/: analyzer.py  comparator.py  embedder.py  reporter.py  scraper.py
competeiq-frontend/: .gitignore  index.html  package-lock.json  package.json
competeiq-frontend/src/: App.jsx
competeiq-frontend/src/api/: axios.js
competeiq-frontend/src/components/: Layout.jsx  Sidebar.jsx
competeiq-frontend/src/context/: AuthContext.jsx
competeiq-frontend/src/pages/: Alerts.jsx  Competitors.jsx  Dashboard.jsx  Login.jsx  Register.jsx  Reports.jsx
core/: config.py  database.py  middleware.py  security.py
models/: analysis.py  competitor.py  user.py
routers/: analysis.py  auth.py  competitors.py  reports.py
services/: embeddings.py  groq.py  tavily.py
