[project]
name = "competeiq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt==4.0.1",
    "celery>=5.6.3",
    "fastapi>=0.136.3",
    "langchain>=1.3.7",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.4",
    "motor>=3.7.1",
    "numpy>=2.4.6",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "redis>=8.0.0",
    "resend>=2.30.1",
    "sentence-transformers>=5.5.1",
    "tavily-python>=0.7.26",
    "uvicorn>=0.49.0",
]
